# intel-overdrive

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTEXT-SEED.md  Caddyfile  Dockerfile  README.md  SECURITY.md  action.yml  docker-compose.prod.yml  docker-compose.yml  install.sh  pyproject.toml  requirements.txt  trigger-test-results.md
.planning/: REQUIREMENTS.md  ROADMAP.md  STATE.md
agent-skills/: README.md
claude-plugin/: README.md
integrations/: claude-code-setup.sh  claude-code-snippet.md  cursorrules-snippet.md  openai-functions.json  system-prompt-snippet.md
migrations/: env.py
overdrive-intel-mcp/: README.md  package-lock.json  package.json  server.json  test.sh
research/: 01-ecosystem-landscape.md  02-prefiltering-and-auth.md  03-value-add-features.md  04-geo-dashboard-patterns.md  05-phase6-implementation-pitfalls.md  content-gap-investigation.md  mcp-tool-design-best-practices.md  phase-25-test-audit-2026-03-22.md  search-quality-overhaul-2026-03-22.md  user-wants-research.md
scripts/: audit_zero_item_sources.py  backfill_library_embeddings.py  backfill_quality.py  backfill_quality_scores.py  backfill_scores.py  check_breaking.py  create_api_key.py  fix_dormant_sources.py  overdrive-intel-hook.sh  regate_filtered_items.py  reprocess_filtered_items.py  requeue_failed_items.py  seed_expanded_sources.py  seed_phase11_sources.py  seed_phase12_sources.py  seed_phase31_sources.py  seed_rag_sources.py  seed_reference_set.py
src/: mcp_server.py
static/: index.html  setup.sh
tests/: conftest.py  test_action_items.py  test_alert_engine.py  test_alert_workers.py  test_api.py  test_api_admin.py  test_api_alerts.py  test_api_digest.py  test_api_feed.py  test_api_intel.py  test_api_library.py  test_api_ops.py  test_auth.py  (+72 more)
(+154 files in other folders)
